# door_sensor

./: .env  .gitignore  CROSS_COMPILING_ARMV6.md  Cargo.toml  Cross.toml  Dockerfile.cross  LICENSE  README.md  config.json  door_monitor.py  requirements.txt  scan_and_block.sh  scanmac.py  sensor_plan.md  test_door_monitor.py
src/: main.rs
