[package]
name = "door-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
aes = "0.8"
cipher = "0.4"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
crc16 = "0.4"
getrandom = "=0.2.15"

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", features = ["native-tls", "json", "blocking"], default-features = false } 
openssl = { version = "0.10", features = ["vendored"] }
dbus = { version = "0.9", features = ["vendored"] }
zbus = "4.0"

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false } 
